--- a/21_ReactJS/01_IntroToReactAndJSX/plainReact/src/index.html
+++ b/21_ReactJS/01_IntroToReactAndJSX/plainReact/src/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <noscript>Yon need to enable you javascript!!!</noscript>
     <!-- this div with id root is for react -->
     <div id="root"></div>
 
